# ds1000z-tools

./: .gitignore  README.md  flake.nix  pyproject.toml
ds1000z_tools/: cli.py  discover.py  exceptions.py  resource.py  scope.py  test_scope.py
